update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,19 @@
   "installCommand": "echo 'No install needed'",
   "framework": null,
   "outputDirectory": ".",
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/:all*",
